--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -1,10 +1,10 @@
 main:
-  - name: About
+  - name: 关于
     url: '#about'
     weight: 1
-  - name: Posts
+  - name: 列表
     url: /posts/
     weight: 2
-  - name: Docs
-    url: /docs/
+  - name: Linux
+    url: /Linux/
     weight: 3
