--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://blog.zzxhot.com/blog
+baseURL: https://blog.zzxhot.com
 title: 小z的博客
 publishDir: "docs"
 
@@ -10,7 +10,7 @@ theme: wangchucheng.com/hugo-eureka
 
 paginate: 3
 copyright: >
-  &copy; 2022 <a href="https://blog.zzxhot.com/blog">小 z</a>
+  &copy; 2022 <a href="https://blog.zzxhot.com">小 z</a>
 enableEmoji: true
 enableGitInfo: false
 summaryLength: 75
